@@ -26,6 +26,13 @@
 #define _YAHOO_FRIEND_H_
 
 #include "yahoo.h"
+#include "yahoo_packet.h"
+
+typedef enum {
+	YAHOO_STEALTH_DEFAULT = 0,
+	YAHOO_STEALTH_ONLINE,
+	YAHOO_STEALTH_PERM_OFFLINE
+} YahooStealthVisibility;
 
 /* these are called friends instead of buddies mainly so I can use variables
  * named f and not confuse them with variables named b
@@ -39,8 +46,8 @@ typedef struct _YahooFriend {
 	gboolean sms;
 	char *ip;
 	gboolean bicon_sent_request;
+	YahooStealthVisibility stealth;
 } YahooFriend;
-
 
 YahooFriend *yahoo_friend_find(GaimConnection *gc, const char *name);
 YahooFriend *yahoo_friend_find_or_new(GaimConnection *gc, const char *name);
@@ -58,5 +65,9 @@ void yahoo_friend_set_buddy_icon_need_request(YahooFriend *f, gboolean needs);
 gboolean yahoo_friend_get_buddy_icon_need_request(YahooFriend *f);
 
 void yahoo_friend_free(gpointer p);
+
+void yahoo_process_stealth(GaimConnection *gc, struct yahoo_packet *pkt);
+void yahoo_friend_update_stealth(GaimConnection *gc, const char *name,
+		YahooStealthVisibility stealth);
 
 #endif /* _YAHOO_FRIEND_H_ */
